# postly

./: .dockerignore  .gitignore  .gitmodules  .travis.yaml  .travis.yml  CMakeLists.txt  CNAME  Dockerfile  README  README.md  build.py  build_viewer.sh  classes.drawio  config.cmake  data_flow.drawio  dc-check.php  deploy.yml  download_data.sh  download_models.sh  locustfile.py  packages.txt  postly.drawio  prepare_viewer.sh  requirements.txt
configs/: annotator.pbtxt  embedder.pbtxt  server.pbtxt
configs/driver/: annotator.pbtxt  clusterer.pbtxt  server.pbtxt  summarizer.pbtxt
configs/driver/rating/: pagerank.pbtxt
configs/rating/: alexa.pbtxt  pagerank.pbtxt
diagrams/: agregator_manual.drawio  data_flow.drawio  gantt.drawio  postly.drawio  wireframe.drawio
docs/en/: economy.html  entertainment.html  other.html  science.html  technology.html
docs/ru/: economy.html  entertainment.html  other.html  science.html  sports.html  technology.html
docs/viewer/en/: economy.html  entertainment.html  other.html  science.html  technology.html
docs/viewer/ru/: economy.html  entertainment.html  other.html  science.html  sports.html  technology.html
driver/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
driver/annotator/: annotator.cpp  annotator.h
driver/atomic/: atomic.h
driver/clustering/: clusterer.cpp  clusterer.h
driver/clustering/impl/: single_linkage.h
driver/controller/: controller.cpp
driver/detect/: detect.cpp
driver/document/: document.cpp  document.h
driver/document/impl/: db_document.cpp  db_document.h
driver/embedder/: embedder.h
driver/embedder/impl/: ft_embedder.cpp  ft_embedder.h
driver/nasty/: nasty.cpp
driver/proto/: config.proto  document.proto
driver/ranker/: ranker.cpp  ranker.h
driver/rating/: rating.h
driver/server/: server.cpp  server.h
driver/summarizer/: summarizer.cpp  summarizer.h
driver/thread_pool/: thread_pool.h
notebooks/: en_category_train.ipynb  ru_category_train.ipynb
output/en/: economy.html  entertainment.html  other.html  science.html  technology.html
output/ru/: economy.html  entertainment.html  other.html  science.html  sports.html  technology.html
rss/: CMakeLists.txt  main.cpp
rss_parser/: rss_parser.py  user_agent_list.py  utils.py
src/: annotator.cpp  annotator.h  db_document.cpp  db_document.h  detect.cpp  detect.h  document.cpp  document.h  main.cpp  nasty.h  utils.cpp  utils.h
src/annotator/: annotator.cpp  annotator.h
src/atomic/: atomic.h
src/cluster/: cluster.cpp  cluster.h
src/clustering/: clusterer.cpp  clusterer.h  clustering.h
src/clustering/impl/: single_linkage.cpp  single_linkage.h
src/clustering/server/: index.cpp  index.h
src/controller/: controller.cpp  controller.h
src/detect/: detect.cpp  detect.h
src/document/: document.cpp  document.h
src/document/impl/: db_document.cpp  db_document.h
src/embedder/: embedder.h  ft_embedder.cpp  ft_embedder.h
src/embedder/impl/: ft_embedder.cpp  ft_embedder.h
src/nasty/: nasty.h
src/proto/: config.proto  enum.proto
src/ranker/: ranker.h
src/rating/: rating.cpp  rating.h
src/server/: server.cpp  server.h
src/summarizer/: summarizer.cpp  summarizer.h
src/thread_pool/: thread_pool.cpp
viewer/: calc_category_metrics.py  calc_threads_metrics.py  convert.py  metrict_to_html.py
viewer/output/css/: postly.css
viewer/output/en/: economy.html  entertainment.html  other.html  science.html  technology.html
viewer/output/ru/: economy.html  entertainment.html  other.html  science.html  sports.html  technology.html
viewer/templates/: article.html  base.html  cluster.html  rubric.html
viewer/templates/css/: postly.css
